--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&family=Open+Sans:wght@300;400;700;800&family=Poppins:ital,wght@0,100;0,300;0,500;0,600;0,700;1,100;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
-    <title>{% block title %}Travel, World!| Blog!{% endblock %}</title>
+    <title>{% block title %}What a Trip| Blog!{% endblock %}</title>
 
   </head>
   
