--- a/members_signup/templates/registration/password_changed.html
+++ b/members_signup/templates/registration/password_changed.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-Your Password was successfully, Please login <a href="{% url 'login' %}">here</a>
+Your Password was successfully changed, Please login <a href="{% url 'login' %}">here</a>
 <br/><br/>
 
 
