--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -16,7 +16,7 @@
                                    {{ form.media }}
                                    {{ form.as_p }}
                                    <div class="form-btn">
-                                          <button class="btn btn-secondary">Post</button>
+                                          <button class="btn btn-create-post">Post</button>
                                    </div>
                             </form>
                      </div>
