--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -76,8 +76,8 @@
           
         </div>
         <div class="social-media-links">
-          <a href="https://facebook.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://instagram.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
     
         </div>
