--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,8 +24,6 @@ body {
 
 /*Post container*/
 
-
-
 .author {
     font-size: 14px;
     margin-bottom: 2px;
@@ -130,12 +128,28 @@ body {
     color:#563329;
 }
 
+.list-category {
+    border-radius: 10px !important;
+}
 .list-category li {
     list-style-type: none;
     text-align: center;
-    font-weight: 700;
+    font-weight: 300;
     text-transform: uppercase;
-    
+}
+
+.card-category {
+    margin-top: 1rem;
+    line-height: 1.6;
+    font-weight: 700;
+    color: #AD9FA4;
+    text-align: center;
+    text-transform:uppercase;
+    font-size: 20px;
+}
+
+.list-category li:hover{
+    font-weight: 600;
 }
 
 .btn-submit {
