--- a/members_signup/templates/registration/register.html
+++ b/members_signup/templates/registration/register.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <div class="register-page">
+  
   <div class="register">
     <h1 class="register-txt"> Register Now </h1>
     <form method="POST" action="">
@@ -12,7 +13,7 @@
 
       <div class="form-btn">
         <br>
-        <button class="btn btn-danger">Submit</button>
+        <button class="btn submit-btn">Submit</button>
       </div>
     </form>
     <div class="link">
