--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -7,7 +7,7 @@
   <div class="container my-3 my-sm-5">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-8">
-            <h2 class="mb-3 text-center">{{ post.title }}</h2>
+            <h2 class="text-setion">{{ post.title }}</h2>
             
             <article class="mb-3">
                 {% if "placeholder" in post.header_img.url %}
@@ -49,7 +49,7 @@
             <br/><br/>
             <hr class="mb40">
             <br/><br/>
-          <!------> 
+          
         </div>
         <!-----End of the main body-->
         <!--Asides Section-->
@@ -103,7 +103,7 @@
   
   <div class="card mb-3">
       <div class="card-body">
-          <h5 class="card-title">About the Blog</h5>
+          <h5 class="card-title">About What a trip | Blog</h5>
           <p class="card-text main-title">I always thought about what it would be like to travel the world or live traveling, exploring every corner of the planet, without being stuck in an office.</p>
           <p>And I've always had some dream destinations, places I've dreamed or dreamed of going to since I was a child, but I confess that I've spent a good part of my life living the dreams of others,</p>
            <p>getting to know the favorite destinations of other destinations. This blog you also help you with your dreams.</p>
@@ -116,16 +116,16 @@
   <div class="comment-bttm-box">
     <div class="container mt-5">
         <h2 class="comment-header p-3">Comments</h2>
-        <br/>
+        <hr class="mb40"><br/>
     {% if not post.comments.all %}
-    No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
+    <div class="mt-2 text-center">No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"><button class="btn submit-comment" type="button">Add a comment</button></a></div>
     {% else %}
         <div class="d-flex justify-content-center row">
             <div class="col-md-8">
                 <div class="d-flex flex-column comment-section">
                     <div class="bg-white p-2">
                         {% for comment in post.comments.all %}
-                        <div class="d-flex flex-row user-info"><img class="rounded-circle" src="{% static 'japan.jpg' %}" width="40">
+                        <div class="d-flex flex-row user-info">
                             <div class="d-flex flex-column justify-content-start ml-2"><span class="d-block font-weight-bold name">{{comment.name }}</span><span class="date text-black-50">Shared publicly - {{ comment.date_added }}</span></div>
                         </div>
                         <div class="mt-2">
@@ -134,9 +134,11 @@
                     </div>
                     {% endfor %}
                     <br>
-                    <div class="mt-2 text-right"><button class="btn btn-primary btn-sm shadow-none" type="button"><a href ="{% url 'add_your_comments' post.pk %}">Comment</a></button></div>
+                    <div class="mt-2 text-center"><a href ="{% url 'add_your_comments' post.pk %}"><button class="btn submit-comment" type="button">Comment</button></a></div>
+                    
                 </div>
             </div>
+            <br><br/>
             {% endif %}
         </div>
     </div>
