--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -72,7 +72,7 @@
 
                   <hr />
 
-                  <p class="card-text text-muted h6">{{ post.publish_date}}</p>
+                  <p class="card-text text-muted h6">Created on {{ post.publish_date}}</p>
 
                 </div>
 
