--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -10,15 +10,17 @@
        <div class="forms">
               <div class="container-post-box">
                      <h1 class="page-title">Create your Post</h1>
-                     <div class="mb-3">
-                            <form method="POST" enctype="multipart/form-data">
-                                   {% csrf_token %}
-                                   {{ form.media }}
-                                   {{ form.as_p }}
-                                   <div class="form-btn">
-                                          <button class="btn btn-create-post">Post</button>
-                                   </div>
-                            </form>
+                     <div class="createpost">
+                            <div class="mb-3">
+                                   <form method="POST" enctype="multipart/form-data">
+                                          {% csrf_token %}
+                                          {{ form.media }}
+                                          {{ form.as_p }}
+                                          <div class="form-btn">
+                                                 <button class="btn btn-create-post">Post</button>
+                                          </div>
+                                   </form>
+                            </div>
                      </div>
               </div>
        </div>
