--- a/world/templates/category.html
+++ b/world/templates/category.html
@@ -47,10 +47,12 @@
     </div>
 </div>
 {% else %}
- <div class="not-allowed">
-    <div class="not-loggedin">
-        <p>This category has no posts.</p>
-        <p><a href="{% url 'post' %}">Add one</a></p>
+ <div class="not-img">
+    <div class="not-allowed">
+        <div class="not-loggedin">
+            <p>This category has no posts.</p>
+            <p><a href="{% url 'post' %}">Add one</a></p>
+     </div>
  </div>
  </div>
 </div>
