--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ a {
     text-decoration: none;
     text-transform:uppercase;
     color: #563329;
-    font: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
 
@@ -385,7 +385,7 @@ label {
     text-decoration: none;
     color:#fff;
     opacity: .6;
-    opacity: opacity .3s ease;
+    
 }
 
 .link a:hover{
