--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -5,39 +5,40 @@
 
 {% if user.is_authenticated %}
 
-
-<div class="bact-img">
-       <div class="forms">
-              <div class="container-post-box">
-                     <h1 class="page-title">Create your Post</h1>
-                     <div class="createpost">
-                            <div class="mb-3">
-                                   <form method="POST" enctype="multipart/form-data">
-                                          {% csrf_token %}
-                                          {{ form.media }}
-                                          {{ form.as_p }}
-                                          <div class="form-btn">
-                                                 <button class="btn btn-create-post">Post</button>
-                                          </div>
-                                   </form>
+<main class="flex-shrink-0 main-bg base">
+       <div class="bact-img">
+              <div class="form-post">
+                     <div class="container-post-box">
+                            <h1 class="page-title">Create your Post</h1>
+                            <div class="createpost">
+                                   <div class="mb-3">
+                                          <form method="POST" enctype="multipart/form-data">
+                                                 {% csrf_token %}
+                                                 {{ form.media }}
+                                                 {{ form.as_p }}
+                                                 <div class="form-btn">
+                                                        <button class="btn btn-create-post">Post</button>
+                                                 </div>
+                                          </form>
+                                   </div>
                             </div>
                      </div>
               </div>
-       </div>
-       <!---Function script to display restriction to Post Author-->
-              <script>
-                     var name = "{{ user.id }}";
-                     document.getElementById("user").value = name;
-              </script>
-       {% else %}
-       <div class="not-allowed">
-              <div class="not-loggedin">
-                     <p><a href="{% url 'login' %}">Login Here</a></p>
+              <!---Function script to display restriction to Post Author-->
+                     <script>
+                            var name = "{{ user.id }}";
+                            document.getElementById("user").value = name;
+                     </script>
+              {% else %}
+              <div class="not-allowed">
+                     <div class="not-loggedin">
+                            <p><a href="{% url 'login' %}">Login Here</a></p>
+                     </div>
+              
               </div>
+       <div>
        
-       </div>
-<div>
-
+</main>
 
 
 
